# ImatiSTL_bindings

./: .gitmodules  CMakeLists.txt  README.md
include/: cut_intersections.h  exact_outer_hull.h  fill_small_boundaries.h  mesh_to_trimesh.h  trimesh_to_mesh.h
test/: ImatiSTL.cpp
